--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class = "jobTitle">AI Programmer</div>
 			</div>
 		</div>
-		<div class = "aboutMe">My name is Andrew Beaulieu and I am a Game AI Programmer. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. This website contains a sample of some of the work that I have developed over my career, feel free to contact me with any questions.</div>
+		<div class = "aboutMe">My name is Andrew Beaulieu and I am a Game AI Programmer. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.</div>
 		
 	  <div class = "projectsSection" id = "projects">Projects
 			<div class = "projectHeader">Beat The Machine</div>
