--- a/BeatTheMachine.html
+++ b/BeatTheMachine.html
@@ -14,7 +14,7 @@
   <body>
 	 
   <!-- body code goes here -->
-	<div class = "bodyContainer">
+  <div class = "bodyContainerBTM">
 		<div class = "header">
             <a href="index.html#home"><div class = "horizontalList">Home</div></a>
 			<div class = "dropdown">
