--- a/LegendsAndWarfare.html
+++ b/LegendsAndWarfare.html
@@ -12,7 +12,7 @@
   </head>
   <body>
   	<!-- body code goes here -->
-	<div class="bodyContainer">
+	<div class="bodyContainerLAW">
 	  <div class = "header">
             <a href="index.html#home"><div class = "horizontalList">Home</div></a>
 			<div class = "dropdown">
