--- a/Resume.html
+++ b/Resume.html
@@ -13,7 +13,7 @@
   </head>
   <body>
   	<!-- body code goes here -->
-	<div class="bodyContainer">
+	<div class="bodyContainerResume">
 	  	<div class = "header">
             <a href="index.html#home"><div class = "horizontalList">Home</div></a>
 			<div class = "dropdown">
