--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
   	<!-- body code goes here -->
 	  
-  <div class= "bodyContainer">
+  <div class= "bodyContainerHome">
 		<div class = "header">
             <a href="#home"><div class = "horizontalList">Home</div></a>
 			<div class = "dropdown">
