--- a/BeatTheMachine.html
+++ b/BeatTheMachine.html
@@ -28,7 +28,12 @@
 		</div>
 		
 	  <div class = "projectPageTitle">Beat The Machine</div>
-		
+		<div class = "projectTrailer">
+			<video style="width:100%;height:100%" controls>
+				<source src = "Videos/BTMTrailer.mp4">
+			</video>
+	  	</div>
+	  	<div class="portfolioTitle"></div>
 		<div class="portfolioTitle"></div>
 	  	<div class = "portfolioBox">
 			<div class = "portfolioVideo">
