btm hazards video

--- a/BeatTheMachine.html
+++ b/BeatTheMachine.html
@@ -63,7 +63,9 @@
 	  <div class="portfolioTitle"></div>
 	  	<div class = "portfolioBox">
 			<div class = "portfolioVideo">
-			Video To Be Added
+				<video style="width:100%;height:100%" controls>
+					<source src = "Videos/BTMHazards.mp4">
+			  	</video>
 			</div>
 			<div class = "portfolioText">
 			  	<div class = "portfolioTextTitle">Gameplay Hazards</div>
