--- a/LegendsAndWarfare.html
+++ b/LegendsAndWarfare.html
@@ -47,9 +47,9 @@
 	  	<div class="portfolioTitle"></div>
 		<div class = "portfolioBox">
 			<div class = "portfolioVideo">
-				<video style="width:100%;height:100%" controls>
-					<source src = "Videos/LawTowers.mp4">
-				</video>
+              <video style="width:100%;height:100%" controls>
+                <source src="Videos/LawTowers.mp4" type="video/mp4">
+              </video>
 			</div>
 		  	<div class = "portfolioText">
 			  	<div class = "portfolioTextTitle">Tower Targeting</div>
