--- a/Resume.html
+++ b/Resume.html
@@ -30,7 +30,7 @@
 			<div class="resumeTitle">Resume</div>
 			<div class="resumeDownload"><a href="Downloads/ARBeaulieu_Resume.pdf" download>Download as PDF</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="Downloads/ARBeaulieu Resume.docx" download>Download as .docx</a></div>
 			<div class="resumeImage">
-				<img src="Images/Resume.PNG" style = "width:100%;height:100%" alt=""/>
+				<img src="Images/Andrew_Beaulieu_Resume.PNG" style = "width:100%;height:100%" alt=""/>
 			</div>
 		</div>
 	  
