--- a/Resume.html
+++ b/Resume.html
@@ -28,7 +28,8 @@
 	  
 		<div class="resumeSection">
 			<div class="resumeTitle">Resume</div>
-			<div class="resumeDownload"><a href="Downloads/ARBeaulieu_Resume.pdf" download>Download as PDF</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="Downloads/ARBeaulieu Resume.docx" download>Download as .docx</a></div>
+			<div class="resumeDownloadPDF"><a href="Downloads/ARBeaulieu_Resume.pdf" download>Download as PDF</a></div>
+			<div class="resumeDownloadDOC"><a href="Downloads/ARBeaulieu Resume.docx" download>Download as .docx</a></div>
 			<div class="resumeImage">
 				<img src="Images/Andrew_Beaulieu_Resume.PNG" style = "width:100%;height:100%" alt=""/>
 			</div>
