--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		  	<div class = "projectBox">
 		  	  	<div class = "projectIcon"><img src="Images/Law Icon.png" style = "width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
-					<div class = "projectTextTitle">Lead Programmer/AI Programmer</div>
+					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
 					<div class = "projectTextBody">Legends and Warfare is a 3/4 top-down Massive Online Battle Arena(MOBA). LAW was a project created by a team of 15 students over the course of four semesters. I was the Programming lead for the final semester of the project, and the AI programmer for the entirety of development. For this project I primarily worked on the minion behaviors, making them move and fight in the desired manner. I also developed the AI for the towers, focusing on targeting different types of players and enemies in a certain priority.</div>
 					<div class = "projectTextLink"><a href="LegendsAndWarfare.html">Project Page</a></div>
 				</div>
