--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  	<div class = "bannerImage" id = "home">
 			<div class = "myNamePanel">
 	  	  		<div class = "myName">Andrew Beaulieu</div>
-				<div class = "jobTitle">AI Programmer</div>
+				<div class = "jobTitle">AaI Programmer</div>
 			</div>
 		</div>
 	  <div class = "aboutMe">
