--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 			</div>
 		</div>
 	  <div class = "aboutMe">
-	  	My name is Andrew Beaulieu and I am a Game AI Programmer. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.
+	  	My name is Andrew Beaulieu and I am an AI Programmer with a focus in Game AI. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.
 	  </div>
 <div class = "projectsSection" id = "projects">Projects
-	<div class = "projectHeader">Beat The Machine</div>
+	<div class = "projectHeader">Beat The Machine</div>	
 		  	<div class = "projectBox">
 		  	  	<div class = "projectIcon"><img src="Images/BTM Icon.png" style="width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
