--- a/BeatTheMachine.html
+++ b/BeatTheMachine.html
@@ -22,6 +22,7 @@
 					<div class="dropdown-content">
 			  			<a href = "BeatTheMachine.html">Beat the Machine</a>
 						<a href = "LegendsAndWarfare.html">Legends and Warfare</a>
+						<a href = "UnannouncedProject1.html">Unannounced Project</a>
 					</div>
 		  </div>
 			<a href="Resume.html"><div class = "horizontalList">Resume</div></a>
@@ -43,7 +44,7 @@
 			</div>
 			<div class = "portfolioText">
 			  	<div class = "portfolioTextTitle">Basic Enemy Types</div>
-				<div class = "portfolioTextBody">One of the my primary responsibilities for Beat the Machine was to create some of the more common enemies that the player would face on a very regular basis. I created 7 different enemies types, each having several tiers that influence base stats like health, damage and movement speed. These enemies have a variety of different attack, movements, and unique mechanics that work together to create the core gameplay loop of Beat The Machine.</div>
+				<div class = "portfolioTextBody">One of my primary responsibilities for Beat the Machine was to create some of the more common enemies that the player would face on a very regular basis. I created 7 different enemies types, each having several variations that influence base stats such as health, damage and movement speed. These enemies have a variety of different attack, movements, and unique mechanics that work together to create the core gameplay loop of Beat The Machine.</div>
 			</div>
 		</div>
 		
@@ -56,7 +57,7 @@
 			</div>
 		  	<div class = "portfolioText">
 			  	<div class = "portfolioTextTitle">Boss Behaviors</div>
-				<div class = "portfolioTextBody">While the basic enemies make up a larger portion of the gameplay loop, bosses create memorable moments for the player, and their behavior needs to reflect that. As the AI programmer, I worked together with the design lead and project manager to create interactive behaviors for these powerful opponents, then proceeded to implement 5 full length boss encounters, each of which has multiple phases and attack routines.</div>
+				<div class = "portfolioTextBody"> Basic enemies may make up a larger portion of the gameplay loop, but bosses create memorable moments for the player, and their behavior needs to reflect that. As the AI programmer, I worked together with the design lead and project manager to create interactive behaviors for these powerful opponents, then proceeded to implement 5 full length boss encounters, each of which has multiple phases and attack routines.</div>
 			</div>
 		</div>
 		
