--- a/LegendsAndWarfare.html
+++ b/LegendsAndWarfare.html
@@ -20,6 +20,7 @@
 					<div class="dropdown-content">
 			  			<a href = "BeatTheMachine.html">Beat the Machine</a>
 						<a href = "LegendsAndWarfare.html">Legends and Warfare</a>
+						<a href = "UnannouncedProject1.html">Unannounced Project</a>
 					</div>
 				</div>
 			<a href="Resume.html"><div class = "horizontalList">Resume</div></a>
