--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<div class="dropdown-content">
 			  			<a href = "BeatTheMachine.html">Beat the Machine</a>
 						<a href = "LegendsAndWarfare.html">Legends and Warfare</a>
+						<a href = "UnannouncedProject1.html">Unannounced Project</a>
 					</div>
 				</div>
 			<a href="Resume.html"><div class = "horizontalList">Resume</div></a>
@@ -29,14 +30,14 @@
 	  	<div class = "bannerImage" id = "home">
 			<div class = "myNamePanel">
 	  	  		<div class = "myName">Andrew Beaulieu</div>
-				<div class = "jobTitle">AI Programmer</div>
+				<div class = "jobTitle">Game Programmer</div>
 			</div>
 		</div>
 	  <div class = "aboutMe">
 	  	My name is Andrew Beaulieu and I am an AI Programmer with a focus in Game AI. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.
 	  </div>
 <div class = "projectsSection" id = "projects">Projects
-	<div class = "projectHeader">Beat The Machine</div>	
+			<div class = "projectHeader">Beat The Machine</div>	
 		  	<div class = "projectBox">
 		  	  	<div class = "projectIcon"><img src="Images/BTM Icon.png" style="width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
@@ -52,6 +53,16 @@
 				<div class = "projectText">
 					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
 					<div class = "projectTextBody">Legends and Warfare is a 3/4 top-down Massive Online Battle Arena(MOBA). LAW was a project created by a team of 15 students over the course of four semesters. I was the Programming lead for the final semester of the project, and the AI programmer for the entirety of development. For this project I primarily worked on the minion behaviors, making them move and fight in the desired manner. I also developed the AI for the towers, focusing on targeting different types of players and enemies in a certain priority.</div>
+					<div class = "projectTextLink"><a href="LegendsAndWarfare.html">Project Page</a></div>
+				</div>
+		 	</div>
+	
+		<div class = "projectHeader">Unannounced Project</div>
+		  	<div class = "projectBox">
+		  	  	<div class = "projectIcon"><img src="Images/Question_mark.png" style = "width:100%;height:100%" alt=""/></div>
+				<div class = "projectText">
+					<div class = "projectTextTitle">Tools Programmer/Database Engineer</div>
+					<div class = "projectTextBody">Working with a small team, I created in-engine tools in order to improve workflow and efficiency for a larger studio team. These tools were made in Unity and included the framework for designers to build multiple levels with a variety of scripted behaviors with little to no programmer input. I also integrated Microsoft Playfab into the project in order to track user analytics. This included building a fully functioning login and sign up system, as well as creating tools for designers to store gameplay data linked to accounts. </div>
 					<div class = "projectTextLink"><a href="LegendsAndWarfare.html">Project Page</a></div>
 				</div>
 		 	</div>
