--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 	  <div class = "aboutMe">
-	  	My name is Andrew Beaulieu and I am an AI Programmer with a focus in Game AI. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.
+	  	My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.
 	  </div>
 <div class = "projectsSection" id = "projects">Projects
 			<div class = "projectHeader">Beat The Machine</div>	
