--- a/UnannouncedProject1.html
+++ b/UnannouncedProject1.html
@@ -18,7 +18,9 @@
             <a href="index.html#home"><div class = "horizontalList">Home</div></a>
 			<div class = "dropdown">
             	<a href="index.html#projects"><div class = "dropbtn">Projects</div></a>
-					<div class="dropdown-content"> <a href = "LegendsAndWarfare.html">Legends and Warfare</a>
+					<div class="dropdown-content"> 
+						<a href = "BeatTheMachine.html">Beat the Machine</a>
+						<a href = "LegendsAndWarfare.html">Legends and Warfare</a>
 						<a href = "UnannouncedProject1.html">Unannounced Project</a>
 					</div>
 		  </div>
