--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 				<div class = "jobTitle">Game Programmer</div>
 			</div>
 		</div>
+	  
 	  <div class = "aboutMe">
-	  	My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.
+		<div class = "picture"></div>
+		<div class = "aboutMeText">
+	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.
+		</div>
 	  </div>
 <div class = "projectsSection" id = "projects">Projects
 			<div class = "projectHeader">Beat The Machine</div>	
@@ -44,6 +48,8 @@
 					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
 					<div class = "projectTextBody">Beat The Machine is a 3D top-down retro arcade twin-stick shooter where the player takes on the role of an anti-virus inside of a computer fighting off hordes of invaders. Created over the course of one year, I worked as the programming lead and AI programmer. As the programming lead for this project, I co-ordinated a team of five programmers, as well as provided creative and technical input on the direction of the game. As the AI programmer for the project, I created the enemy AI for the project as well as a multitude of other gameplay mechanics.</div>
 					<div class = "projectTextLink"><a href="BeatTheMachine.html">Project Page</a></div>
+					<div class = "projectStoreLink"><a href="BeatTheMachine.html">Steam Page</a></div>
+					
 				</div>
 		 	</div>
 			
@@ -53,7 +59,7 @@
 				<div class = "projectText">
 					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
 					<div class = "projectTextBody">Legends and Warfare is a 3/4 top-down Massive Online Battle Arena(MOBA). LAW was a project created by a team of 15 students over the course of four semesters. I was the Programming lead for the final semester of the project, and the AI programmer for the entirety of development. For this project I primarily worked on the minion behaviors, making them move and fight in the desired manner. I also developed the AI for the towers, focusing on targeting different types of players and enemies in a certain priority.</div>
-					<div class = "projectTextLink"><a href="LegendsAndWarfare.html">Project Page</a></div>
+					<div class = "projectTextLinkOnly"><a href="LegendsAndWarfare.html">Project Page</a></div>
 				</div>
 		 	</div>
 	
@@ -63,7 +69,7 @@
 				<div class = "projectText">
 					<div class = "projectTextTitle">Tools Programmer/Database Engineer</div>
 					<div class = "projectTextBody">Working with a small team, I created in-engine tools in order to improve workflow and efficiency for a larger studio team. These tools were made in Unity and included the framework for designers to build multiple levels with a variety of scripted behaviors with little to no programmer input. I also integrated Microsoft Playfab into the project in order to track user analytics. This included building a fully functioning login and sign up system, as well as creating tools for designers to store gameplay data linked to accounts. </div>
-					<div class = "projectTextLink"><a href="UnannouncedProject1.html">Project Page</a></div>
+					<div class = "projectTextLinkOnly"><a href="UnannouncedProject1.html">Project Page</a></div>
 				</div>
 		 	</div>
 			
