Profile Picture and other changes

--- a/BeatTheMachine.html
+++ b/BeatTheMachine.html
@@ -31,7 +31,7 @@
 	  <div class = "projectPageTitle">Beat The Machine</div>
 		<div class = "projectTrailer">
 			<video style="width:100%;height:100%" controls>
-				<source src = "Videos/BTMTrailer.mp4">
+				<source src = "Videos/BTMTrailer2.mp4">
 			</video>
 	  	</div>
 	  	<div class="portfolioTitle"></div>
