--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
 		</div>
 	  
 	  <div class = "aboutMe">
-		<div class = "picture"></div>
+		<div class = "picture"><img src="Images/ProfilePicture2.jpg" style="width:100%;height:100%" alt=""/></div>
 		<div class = "aboutMeText">
 	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.
 		</div>
+	  </div>
+	  <div class="contactInfo">
+		  <div class="contactInfoEmail">Beaulandrew@gmail.com</div>
+		  <div class="contactInfoLI"><a href="https://www.linkedin.com/in/andrew-beaulieu/">My LinkedIn</a></div>
 	  </div>
 <div class = "projectsSection" id = "projects">Projects
 			<div class = "projectHeader">Beat The Machine</div>	
@@ -48,7 +52,7 @@
 					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
 					<div class = "projectTextBody">Beat The Machine is a 3D top-down retro arcade twin-stick shooter where the player takes on the role of an anti-virus inside of a computer fighting off hordes of invaders. Created over the course of one year, I worked as the programming lead and AI programmer. As the programming lead for this project, I co-ordinated a team of five programmers, as well as provided creative and technical input on the direction of the game. As the AI programmer for the project, I created the enemy AI for the project as well as a multitude of other gameplay mechanics.</div>
 					<div class = "projectTextLink"><a href="BeatTheMachine.html">Project Page</a></div>
-					<div class = "projectStoreLink"><a href="BeatTheMachine.html">Steam Page</a></div>
+					<div class = "projectStoreLink"><a href="BeatTheMachine.html">Steam Page(Coming Soon)</a></div>
 					
 				</div>
 		 	</div>
