--- a/LegendsAndWarfare.html
+++ b/LegendsAndWarfare.html
@@ -28,29 +28,27 @@
 		
 		<div class = "projectPageTitle">Legends and Warfare</div>
 		<div class = "projectTrailer">
-			<iframe style="width:100%;height:100%" src="https://www.youtube.com/embed/5dGsLRzRK4I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<video style="width:100%;height:100%" controls>
+				<source src = "Videos/LAW Legends & Warfare Trailer.mp4">
+			</video>
 		</div>
 		
 		<div class="portfolioTitle"></div>
 		<div class="portfolioTitle"></div>
 	  	<div class = "portfolioBox">
 			<div class = "portfolioVideo">
-				<video style="width:100%;height:100%" controls>
-					<source src = "Videos/LawMinions.mp4">
-				</video>
+				<img src="Videos/LAWMinionsGif.gif" alt="LAW Minions" style="width:100%;height:100%">
 			</div>
 			<div class = "portfolioText">
 			  	<div class = "portfolioTextTitle">Minion Behaviors</div>
-				<div class = "portfolioTextBody">As a core gameplay mechanic of a MOBA, how minions behave is extremely important. Using Unity NavMesh, I implemented pathing and navigation throughout the map. Furthermore, the minions come in two types, melee (RoboDogs), and ranged (EnforcerBots) each with their own attack types and targeting systems. On top of these AI mechanics,I also worked on networking the minions over several machines for multiplayer continuity, as well as implemented animations and sounds created by the other members of the team.</div>
+				<div class = "portfolioTextBody">As a core gameplay mechanic of a MOBA, how minions behave is extremely important. Using Unity NavMesh, I implemented pathing and navigation throughout the map. Furthermore, the minions come in two types, melee (RoboDogs), and ranged (EnforcerBots) each with their own attack types and targeting systems. On top of these AI mechanics, I also worked on networking the minions over several machines for multiplayer continuity, as well as implemented animations and sounds created by the other members of the team.</div>
 			</div>
 		</div>
 		
 	  	<div class="portfolioTitle"></div>
 		<div class = "portfolioBox">
 			<div class = "portfolioVideo">
-              <video style="width:100%;height:100%" controls>
-                <source src="Videos/LawTowers.mp4" type="video/mp4">
-              </video>
+              <img src="Videos/LAW Towers.gif" alt="LAW Minions" style="width:100%;height:100%">
 			</div>
 		  	<div class = "portfolioText">
 			  	<div class = "portfolioTextTitle">Tower Targeting</div>
