--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	  <div class = "aboutMe">
 		<div class = "picture"><img src="Images/ProfilePicture2.jpg" style="width:100%;height:100%" alt=""/></div>
 		<div class = "aboutMeText">
-	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. While my primary field of interest is game programming, I also have expertise in more traditional computer science and web design. Please feel free to contact me with any questions.
+	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. Please feel free to contact me with any questions.
 		</div>
 	  </div>
 	  <div class="contactInfo">
