--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	  <div class = "aboutMe">
 		<div class = "picture"><img src="Images/ProfilePicture2.jpg" style="width:100%;height:100%" alt=""/></div>
 		<div class = "aboutMeText">
-	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. Please feel free to contact me with any questions.
+	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. I graduated from Becker College, the #2 Game design program in the country with a Bachelors in Interactive Media Design, Concentration in Game Programming. Please feel free to contact me with any questions.
 		</div>
 	  </div>
 	  <div class="contactInfo">
@@ -50,10 +50,9 @@
 		  	  	<div class = "projectIcon"><img src="Images/BTM Icon.png" style="width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
 					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
-					<div class = "projectTextBody">Beat The Machine is a 3D top-down retro arcade twin-stick shooter where the player takes on the role of an anti-virus inside of a computer fighting off hordes of invaders. Created over the course of one year, I worked as the programming lead and AI programmer. As the programming lead for this project, I co-ordinated a team of five programmers, as well as provided creative and technical input on the direction of the game. As the AI programmer for the project, I created the enemy AI for the project as well as a multitude of other gameplay mechanics.</div>
+					<div class = "projectTextBody">Beat The Machine is a 3D top-down retro arcade twin-stick shooter where the player takes on the role of an anti-virus inside of a computer fighting off hordes of invaders. Created over the course of one year I worked as the Programming Lead and AI Programmer. As the Programming Lead I co-ordinated a team of four programmers, as well as provided creative and technical input on the direction of the game. As the AI Programmer I created the enemy AI for the project as well as a multitude of hazards, power-ups, and skills.</div>
 					<div class = "projectTextLink"><a href="BeatTheMachine.html">Project Page</a></div>
 					<div class = "projectStoreLink"><a href="BeatTheMachine.html">Steam Page(Coming Soon)</a></div>
-					
 				</div>
 		 	</div>
 			
@@ -62,7 +61,7 @@
 		  	  	<div class = "projectIcon"><img src="Images/Law Icon.png" style = "width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
 					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
-					<div class = "projectTextBody">Legends and Warfare is a 3/4 top-down Massive Online Battle Arena(MOBA). LAW was a project created by a team of 15 students over the course of four semesters. I was the Programming lead for the final semester of the project, and the AI programmer for the entirety of development. For this project I primarily worked on the minion behaviors, making them move and fight in the desired manner. I also developed the AI for the towers, focusing on targeting different types of players and enemies in a certain priority.</div>
+					<div class = "projectTextBody">Legends and Warfare is a Massive Online Battle Arena(MOBA). LAW was a project created by a team of 15 students over the course of four semesters. I was an AI Programmer for the entirety of development and was appointed as Programming Lead for the final semester. For this project I primarily worked on the minion AI, creating behaviors for pathing and combat. I also developed the AI for the towers, focusing on targeting different types of players and enemies in a certain priority.</div>
 					<div class = "projectTextLinkOnly"><a href="LegendsAndWarfare.html">Project Page</a></div>
 				</div>
 		 	</div>
@@ -75,10 +74,8 @@
 					<div class = "projectTextBody">Working with a small team, I created in-engine tools in order to improve workflow and efficiency for a larger studio team. These tools were made in Unity and included the framework for designers to build multiple levels with a variety of scripted behaviors with little to no programmer input. I also integrated Microsoft Playfab into the project in order to track user analytics. This included building a fully functioning login and sign up system, as well as creating tools for designers to store gameplay data linked to accounts. </div>
 					<div class = "projectTextLinkOnly"><a href="UnannouncedProject1.html">Project Page</a></div>
 				</div>
-		 	</div>
-			
-		</div>
-	
+		 	</div>			
+		</div>	
   </div>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
