--- a/BeatTheMachine.html
+++ b/BeatTheMachine.html
@@ -38,9 +38,7 @@
 		<div class="portfolioTitle"></div>
 	  	<div class = "portfolioBox">
 			<div class = "portfolioVideo">
-				<video style="width:100%;height:100%" controls>
-					<source src = "Videos/BTMEnemies.mp4">
-				</video>
+				<img src = "Videos/BTMEnemies2.gif" style="width:100%;height:100%" alt="BTM Enemies">
 			</div>
 			<div class = "portfolioText">
 			  	<div class = "portfolioTextTitle">Basic Enemy Types</div>
@@ -51,9 +49,7 @@
   	  <div class="portfolioTitle"></div>
 		<div class = "portfolioBox">
 			<div class = "portfolioVideo">
-			<video style="width:100%;height:100%" controls>
-					<source src = "Videos/BossVideos.mp4">
-			  </video>
+				<img src = "Videos/BossMix2.gif" style="width:100%;height:100%" alt="BTM Bosses">
 			</div>
 		  	<div class = "portfolioText">
 			  	<div class = "portfolioTextTitle">Boss Behaviors</div>
@@ -64,9 +60,7 @@
 	  <div class="portfolioTitle"></div>
 	  	<div class = "portfolioBox">
 			<div class = "portfolioVideo">
-				<video style="width:100%;height:100%" controls>
-					<source src = "Videos/BTMHazards.mp4">
-			  	</video>
+				<img src = "Videos/BTMHazards2.gif" style="width:100%;height:100%" alt="BTM Hazards">
 			</div>
 			<div class = "portfolioText">
 			  	<div class = "portfolioTextTitle">Gameplay Hazards</div>
