--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</div>
 	  
 	  <div class = "aboutMe">
-		<div class = "picture"><img src="Images/ProfilePicture2.jpg" style="width:100%;height:100%" alt=""/></div>
+		<div class = "picture"><img src="Images/ProfilePicture.jpg" style="width:100%;height:100%" alt=""/></div>
 		<div class = "aboutMeText">
 	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. I graduated from Becker College, the #2 Game design program in the country with a Bachelors in Interactive Media Design, Concentration in Game Programming. Please feel free to contact me with any questions.
 		</div>
