--- a/Resume.html
+++ b/Resume.html
@@ -30,9 +30,9 @@
 		<div class="resumeSection">
 			<div class="resumeTitle">Resume</div>
 			<div class="resumeDownloadPDF"><a href="Downloads/ARBeaulieu_Resume.pdf" download>Download as PDF</a></div>
-			<div class="resumeDownloadDOC"><a href="Downloads/ARBeaulieu_Resume.docx" download>Download as Word Doc</a></div>
+			<div class="resumeDownloadDOC"><a href="Downloads/ARBeaulieu_Resume.docx" download>Download as .docx</a></div>
 			<div class="resumeImage">
-				<img src="Images/ARBeaulieuResumeCapture.PNG" style = "width:100%;height:100%" alt=""/>
+				<img src="Images/Resume.PNG" style = "width:100%;height:100%" alt=""/>
 			</div>
 		</div>
 	  
