--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		  	  	<div class = "projectIcon"><img src="Images/BTM Icon.png" style="width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
 					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
-					<div class = "projectTextBody">Beat The Machine is a 3D top-down retro arcade twin-stick shooter where the player takes on the role of an anti-virus inside of a computer fighting off hordes of invaders. Created over the course of one year I worked as the Programming Lead and AI Programmer. As the Programming Lead I co-ordinated a team of four programmers, as well as provided creative and technical input on the direction of the game. As the AI Programmer I created the enemy AI for the project as well as a multitude of hazards, power-ups, and skills.</div>
+					<div class = "projectTextBody">Beat The Machine is a 3D top-down retro arcade twin-stick shooter where the player takes on the role of an anti-virus inside of a computer fighting off hordes of invaders. Created over the course of one year I worked as the Programming Lead and AI Programmer. As the Programming Lead I coordinated a team of four programmers, as well as provided creative and technical input on the direction of the game. As the AI Programmer I created the enemy AI for the project as well as a multitude of hazards, power-ups, and skills.</div>
 					<div class = "projectTextLink"><a href="BeatTheMachine.html">Project Page</a></div>
 					<div class = "projectStoreLink"><a href="BeatTheMachine.html">Steam Page(Coming Soon)</a></div>
 				</div>
