--- a/index.html
+++ b/index.html
@@ -27,23 +27,8 @@
 			<a href="Resume.html"><div class = "horizontalList">Resume</div></a>
 		</div>
 		
-	  	<div class = "bannerImage" id = "home">
-			<div class = "myNamePanel">
-	  	  		<div class = "myName">Andrew Beaulieu</div>
-				<div class = "jobTitle">Game Programmer</div>
-			</div>
-		</div>
+<div class = "blankSpace100"></div>
 	  
-	  <div class = "aboutMe">
-		<div class = "picture"><img src="Images/ProfilePicture.jpg" style="width:100%;height:100%" alt=""/></div>
-		<div class = "aboutMeText">
-	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. I graduated from Becker College, the #2 Game design program in the country, with a Bachelors in Interactive Media Design, Concentration in Game Programming. Please feel free to contact me with any questions.
-		</div>
-	  </div>
-	  <div class="contactInfo">
-		  <div class="contactInfoEmail">Beaulandrew@gmail.com</div>
-		  <div class="contactInfoLI"><a href="https://www.linkedin.com/in/andrew-beaulieu/">My LinkedIn</a></div>
-	  </div>
 <div class = "projectsSection" id = "projects">Projects
 			<div class = "projectHeader">Beat The Machine</div>	
 		  	<div class = "projectBox">
@@ -67,16 +52,30 @@
 		 	</div>
 	
 		<div class = "projectHeader">Unannounced Project</div>
-		  	<div class = "projectBox">
-		  	  	<div class = "projectIcon"><img src="Images/Question_mark.png" style = "width:100%;height:100%" alt=""/></div>
-				<div class = "projectText">
-					<div class = "projectTextTitle">Tools Programmer/Database Engineer</div>
-					<div class = "projectTextBody">Working with a small team, I created in-engine tools in order to improve workflow and efficiency for a larger studio team. These tools were made in Unity and included the framework for designers to build multiple levels with a variety of scripted behaviors with little to no programmer input. I also integrated Microsoft Playfab into the project in order to track user analytics. This included building a fully functioning login and sign up system, as well as creating tools for designers to store gameplay data linked to accounts. </div>
-					<div class = "projectTextLinkOnly"><a href="UnannouncedProject1.html">Project Page</a></div>
-				</div>
-		 	</div>			
-		</div>	
-  </div>
+		<div class = "projectBox">
+			<div class = "projectIcon"><img src="Images/Question_mark.png" style = "width:100%;height:100%" alt=""/></div>
+			<div class = "projectText">
+				<div class = "projectTextTitle">Tools Programmer/Database Engineer</div>
+				<div class = "projectTextBody">Working with a small team, I created in-engine tools in order to improve workflow and efficiency for a larger studio team. These tools were made in Unity and included the framework for designers to build multiple levels with a variety of scripted behaviors with little to no programmer input. I also integrated Microsoft Playfab into the project in order to track user analytics. This included building a fully functioning login and sign up system, as well as creating tools for designers to store gameplay data linked to accounts. </div>
+				<div class = "projectTextLinkOnly"><a href="UnannouncedProject1.html">Project Page</a></div>
+			</div>
+		</div>		
+	</div>
+	  
+    <div	class = "blankSpace100"></div><div	class = "blankSpace100"></div>
+	  
+    <div class = "aboutMe">
+		<div class = "picture"><img src="Images/ProfilePicture.jpg" style="width:100%;height:100%" alt=""/></div>
+		<div class = "aboutMeText">
+	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. I graduated from Becker College, the #2 Game design program in the country, with a Bachelors in Interactive Media Design, Concentration in Game Programming. Please feel free to contact me with any questions.
+		</div>
+	  </div>
+	  <div class="contactInfo">
+		  <div class="contactInfoEmail">Beaulandrew@gmail.com</div>
+		  <div class="contactInfoLI"><a href="https://www.linkedin.com/in/andrew-beaulieu/">My LinkedIn</a></div>
+	  </div>
+	  
+  </div><!-- End Body-->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 	<script src="js/jquery-3.3.1.min.js"></script>
