--- a/Resume.html
+++ b/Resume.html
@@ -32,7 +32,7 @@
 			<div class="resumeDownloadPDF"><a href="Downloads/ARBeaulieu_Resume.pdf" download>Download as PDF</a></div>
 			<div class="resumeDownloadDOC"><a href="Downloads/ARBeaulieu_Resume.docx" download>Download as .docx</a></div>
 			<div class="resumeImage">
-				<img src="Images/Resume.PNG" style = "width:100%;height:100%" alt=""/>
+				<img src="Images/Andrew_Beaulieu_Resume.PNG" style = "width:100%;height:100%" alt=""/>
 			</div>
 		</div>
 	  
