--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		  	<div class = "projectBox">
 		  	  	<div class = "projectIcon"><img src="Images/BTM Icon.png" style="width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
-					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
+					<div class = "projectTextTitle">Programming Lead</div>
 					<div class = "projectTextBody">Beat The Machine is a 3D top-down retro arcade twin-stick shooter where the player takes on the role of an anti-virus inside of a computer fighting off hordes of invaders. Created over the course of one year I worked as the Programming Lead and AI Programmer. As the Programming Lead I coordinated a team of four programmers, as well as provided creative and technical input on the direction of the game. As the AI Programmer I created the enemy AI for the project as well as a multitude of hazards, power-ups, and skills.</div>
 					<div class = "projectTextLink"><a href="BeatTheMachine.html">Project Page</a></div>
 					<div class = "projectStoreLink"><a href="https://store.steampowered.com/app/1272240/Beat_The_Machine/">Steam Page</a></div>
@@ -45,7 +45,7 @@
 		  	<div class = "projectBox">
 		  	  	<div class = "projectIcon"><img src="Images/Law Icon.png" style = "width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
-					<div class = "projectTextTitle">Programming Lead/AI Programmer</div>
+					<div class = "projectTextTitle">Programming Lead</div>
 					<div class = "projectTextBody">Legends and Warfare is a Massive Online Battle Arena(MOBA). LAW was a project created by a team of 15 students over the course of four semesters. I was an AI Programmer for the entirety of development and was appointed as Programming Lead for the final semester. For this project I primarily worked on the minion AI, creating behaviors for pathing and combat. I also developed the AI for the towers, focusing on targeting different types of players and enemies in a certain priority.</div>
 					<div class = "projectTextLinkOnly"><a href="LegendsAndWarfare.html">Project Page</a></div>
 				</div>
@@ -61,20 +61,23 @@
 			</div>
 		</div>		
 	</div>
-	  
+	
+	   <!--
     <div	class = "blankSpace100"></div><div	class = "blankSpace100"></div>
-	  
+	
+	 
     <div class = "aboutMe">
 		<div class = "picture"><img src="Images/ProfilePicture.jpg" style="width:100%;height:100%" alt=""/></div>
 		<div class = "aboutMeText">
-	  		My name is Andrew Beaulieu and I am a Game Programmer with a focus in Game AI. I graduated from Becker College, the #2 Game design program in the country, with a Bachelors in Interactive Media Design, Concentration in Game Programming. Please feel free to contact me with any questions.
+	  		My name is Andrew Beaulieu and I am a Game Programmer. I graduated from Becker College, the #2 Game design program in the country, with a Bachelors in Interactive Media Design, Concentration in Game Programming. Please feel free to contact me with any questions.
 		</div>
 	  </div>
 	  <div class="contactInfo">
 		  <div class="contactInfoEmail">Beaulandrew@gmail.com</div>
 		  <div class="contactInfoLI"><a href="https://www.linkedin.com/in/andrew-beaulieu/">My LinkedIn</a></div>
 	  </div>
-	  
+		-->	  
+
   </div><!-- End Body-->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
