--- a/LegendsAndWarfare.html
+++ b/LegendsAndWarfare.html
@@ -18,6 +18,7 @@
 			<div class = "dropdown">
             	<a href="index.html#projects"><div class = "dropbtn">Projects</div></a>
 					<div class="dropdown-content">
+						<a href = "BallroomBanter.html">Ballroom Banter</a>
 			  			<a href = "BeatTheMachine.html">Beat the Machine</a>
 						<a href = "LegendsAndWarfare.html">Legends and Warfare</a>
 						<a href = "UnannouncedProject1.html">Unannounced Project</a>
