--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<div class = "dropdown">
             	<a href="#projects"><div class = "dropbtn">Projects</div></a>
 					<div class="dropdown-content">
+						<a href = "BallroomBanter.html">Ballroom Banter</a>
 			  			<a href = "BeatTheMachine.html">Beat the Machine</a>
 						<a href = "LegendsAndWarfare.html">Legends and Warfare</a>
 						<a href = "UnannouncedProject1.html">Unannounced Project</a>
@@ -29,8 +30,20 @@
 		
 <div class = "blankSpace100"></div>
 	  
-<div class = "projectsSection" id = "projects">Projects
-			<div class = "projectHeader">Beat The Machine</div>	
+<div class = "projectsSection" id = "projects">My Projects
+<div class = "blankSpace100"></div>
+	<div class = "projectHeader">Ballroom Banter</div>	
+		  	<div class = "projectBox">
+		  	  	<div class = "projectIcon"><img src="Images/BallroomBanterIcon.PNG" style="width:100%;height:100%" alt=""/></div>
+				<div class = "projectText">
+					<div class = "projectTextTitle">Programming Lead</div>
+					<div class = "projectTextBody">The Masquerade is a mobile strategic card game developed in conjunction with the MassDiGI Experience Program. As the Programming Lead, I developed the primary gameplay systems and data storage architecture. The card play system for the game includes not only basic controls and UI management, but also advanced logic to resolve any number of card effects at the same time. I also implemented over 25 unique card effects and the progression and rewards systems.</div>
+					<div class = "projectTextLink"><a href="BallroomBanter.html">Project Page</a></div>
+					<div class = "projectStoreLink"><a href="https://apps.apple.com/us/app/ballroom-banter/id1562189556">iOS</a> / <a href="https://play.google.com/store/apps/details?id=com.MassDiGI.Cake&hl=en_US&gl=US"> Google Play</a></div>
+				</div>
+		 	</div>		
+	
+		<div class = "projectHeader">Beat The Machine</div>	
 		  	<div class = "projectBox">
 		  	  	<div class = "projectIcon"><img src="Images/BTM Icon.png" style="width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
@@ -41,11 +54,11 @@
 				</div>
 		 	</div>
 			
-		  	<div class = "projectHeader">Legends and Warfare</div>
+		  <div class = "projectHeader">Legends and Warfare</div>
 		  	<div class = "projectBox">
 		  	  	<div class = "projectIcon"><img src="Images/Law Icon.png" style = "width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
-					<div class = "projectTextTitle">Programming Lead</div>
+					<div class = "projectTextTitle">Gameplay Programmer</div>
 					<div class = "projectTextBody">Legends and Warfare is a Massive Online Battle Arena(MOBA). LAW was a project created by a team of 15 students over the course of four semesters. I was an AI Programmer for the entirety of development and was appointed as Programming Lead for the final semester. For this project I primarily worked on the minion AI, creating behaviors for pathing and combat. I also developed the AI for the towers, focusing on targeting different types of players and enemies in a certain priority.</div>
 					<div class = "projectTextLinkOnly"><a href="LegendsAndWarfare.html">Project Page</a></div>
 				</div>
