--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  	  	<div class = "projectIcon"><img src="Images/BallroomBanterIcon.PNG" style="width:100%;height:100%" alt=""/></div>
 				<div class = "projectText">
 					<div class = "projectTextTitle">Programming Lead</div>
-					<div class = "projectTextBody">The Masquerade is a mobile strategic card game developed in conjunction with the MassDiGI Experience Program. As the Programming Lead, I developed the primary gameplay systems and data storage architecture. The card play system for the game includes not only basic controls and UI management, but also advanced logic to resolve any number of card effects at the same time. I also implemented over 25 unique card effects and the progression and rewards systems.</div>
+					<div class = "projectTextBody">Ballroom Banter is a mobile strategic card game developed in conjunction with the MassDiGI Experience Program. As the Programming Lead, I developed the primary gameplay systems and data storage architecture. The card play system for the game includes not only basic controls and UI management, but also advanced logic to resolve any number of card effects at the same time. I also implemented over 25 unique card effects and the progression and rewards systems.</div>
 					<div class = "projectTextLink"><a href="BallroomBanter.html">Project Page</a></div>
 					<div class = "projectStoreLink"><a href="https://apps.apple.com/us/app/ballroom-banter/id1562189556">iOS</a> / <a href="https://play.google.com/store/apps/details?id=com.MassDiGI.Cake&hl=en_US&gl=US"> Google Play</a></div>
 				</div>
